Fixed the text alignment

--- a/Project.css
+++ b/Project.css
@@ -22,6 +22,7 @@ body{
 .header-link{
     font-size: 18px;
     color: #e5e7eb;
+    margin: 10px;
 }
 
 .navbar{
@@ -46,7 +47,35 @@ h1{
     font-weight: bolder;
     color: #f9faf8;
 }
-h2{
+
+.content{
+    display: flex;
+    flex-direction: row;
+    margin: 50px;
+}
+
+.content-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 50%;
+}
+
+.content-left{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    justify-content: center;
+    align-items: center;
+}
+
+img{
+    margin: 50px;
+}
+
+.p-first{
     font-size: 18px;
     color: #e5e7eb;
+    margin-left: 90px;
 }
